[package]
name = "factory"
version = "0.1.0"
author = "Gajesh Naik @Gajesh2007"
description = "Factory"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "factory"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
controller = { path = "../controller", features = ["cpi"]}
members = { path = "../members", features = ["cpi"]}
anchor-spl = "0.25.0"
